<resources>
    <string name="app_name">DCMS_staff</string>
    <string name="userID">User ID</string>
    <string name="enter">ENTER</string>
    <string name="ic">IC</string>
    <string name="phonenumber">Phone Number</string>
    <string name="address">Address</string>
    <string name="back">BACK</string>
    <string name="dialysisname">Dialysis Centre Management System</string>
    <string name="language">Language</string>
    <string name="viewprofile">Profile</string>
    <string name="view_patient_schedule">Patient Booking Schedule</string>
    <string name="report">Report</string>
    <string name="patient_name">Name</string>
    <string name="search">Search</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="QR_code">QR Code</string>
    <string name="machine_ID">Machine ID</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="type">Type</string>
    <string name="model_number">Model Number</string>
    <string name="weight">Weight</string>
    <string name="pic_name">PIC Name</string>
    <string name="pic_contactNum">PIC Contact Number</string>
    <string name="machine_name">Machine Name</string>
    <string name="manage_machine">Manage Machine</string>
    <string name="view_hotline_contact">View Hotline Contact</string>
    <string name="new_booking">New Booking</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="selectTime">SELECT TIME</string>
    <string name="selectDate">SELECT DATE</string>
    <string name="dcms_machine">DCMS Machine</string>
    <string name="hotline_contact">HOTLINE CONTACT</string>
    <string name="make_new_booking">Make New Booking</string>
    <string name="user_name">Username</string>
    <string name="user_password">Password</string>
    <string name="pic">PIC</string>
    <string name="change_status">Change status</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="last_updated">Last Updated</string>
    <string name="notification" translatable="false">Notification</string>
    <string name="dialysisType">Dialysis Type</string>
    <string name="booking_schedule">Booking Schedule</string>
    <string name="register">Register</string>
    <string-array name="list">
        <item>Slot 1: 7am - 11am</item>
        <item>Slot 2: 11am - 3pm</item>
    </string-array>
    <string-array name="list4">
        <item>Slot 1: Sunday</item>
        <item>Slot 1: Tuesday</item>
        <item>Slot 1: Thursday</item>
        <item>Slot 2: Saturday</item>
        <item>Slot 2: Monday</item>
        <item>Slot 2: Wednesday</item>
    </string-array>
    <string-array name="list2">
        <item>Slot 1: Sunday, Tuesday, Thursday</item>
        <item>Slot 2: Saturday, Monday, Wednesday</item>
    </string-array>
    <string-array name="list3">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="manage_booking">Manage Booking</string>
    <string name="patient_information">Patient Information</string>
    <string name="edit">Edit</string>
    <string name="patient_ID">Patient ID</string>
    <string name="manage_booking_schedule">Manage Booking Schedule</string>
    <string name="save">Save</string>
    <string name="register_new_patient">Register New Patient</string>
    <string name="next_update">Next Update</string>
</resources>
