<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newbackground"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".LoginPage">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="191dp"
        android:layout_height="209dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo1"
        app:civ_border_color="#AA0868"
        app:civ_border_width="4dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/dialysisname"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/UserName"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textview_round"
        android:ems="10"
        android:foregroundGravity="center_vertical|center"
        android:inputType="text"
        android:hint="@string/user_name"
        android:textAlignment="center"
        android:textColorHint="@color/colorGrey"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textview_round"
        android:ems="10"
        android:foregroundGravity="center_vertical|center"
        android:inputType="textPersonName"
        android:hint="@string/user_password"
        android:textAlignment="center" />

    <Button
        android:id="@+id/enter"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_round"
        android:hint="@string/enter"
        android:onClick="@string/enter"
        android:padding="4dp"
        android:text="@string/enter"
        android:textColor="@color/colorAccent"
        android:textIsSelectable="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/forgotPassword"
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="#00FFFFFF"
        android:ems="10"
        android:gravity="right|center_horizontal"
        android:paddingStart="20dp"
        android:text="@string/forgot_password"
        android:textAlignment="gravity"
        android:textColor="#3F4A85"
        android:textSize="18sp" />

</LinearLayout>