<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterForPatient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/newbackground"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:foregroundGravity="center_vertical"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="40dp"
            android:textStyle="bold|italic"
            android:text="@string/register" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:textColor="#1C1A1B"
                android:textSize="15sp"
                android:textStyle="bold|italic"
                android:text="@string/patient_name" />

            <EditText
                android:id="@+id/editText9"
                android:layout_width="288dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#1C1A1B"
                android:textSize="15sp"
                android:textStyle="bold|italic"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/ic" />

            <EditText
                android:id="@+id/editText10"
                android:layout_width="311dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#1C1A1B"
                android:textSize="15sp"
                android:textStyle="bold|italic"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/phonenumber" />

            <EditText
                android:id="@+id/editText11"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textColor="#1C1A1B"
                android:textSize="15sp"
                android:textStyle="bold|italic"
                android:layout_weight="1"
                android:text="@string/dialysisType"/>

            <EditText
                android:id="@+id/editText12"
                android:layout_width="241dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#1C1A1B"
                android:textSize="15sp"
                android:textStyle="bold|italic"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/address" />

            <EditText
                android:id="@+id/editText15"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#1C1A1B"
                android:textSize="15sp"
                android:textStyle="bold|italic"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/pic_name" />

            <EditText
                android:id="@+id/editText13"
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#1C1A1B"
                android:textSize="15sp"
                android:textStyle="bold|italic"
                android:layout_marginRight="10dp"
                android:text="@string/pic_contactNum" />

            <EditText
                android:id="@+id/editText17"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#1C1A1B"
                android:textSize="15sp"
                android:textStyle="bold|italic"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/user_name" />

            <EditText
                android:id="@+id/editText16"
                android:layout_width="262dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#1C1A1B"
                android:textSize="15sp"
                android:textStyle="bold|italic"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/user_password" />

            <EditText
                android:id="@+id/editText14"
                android:layout_width="264dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_round"
                android:layout_gravity="center_horizontal"
                android:text="@string/save"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:layout_marginRight="20dp" />

            <Button
                android:id="@+id/button22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_round"
                android:textColor="@color/colorAccent"
                android:hint="@string/back"
                android:text="BACK"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>